tests/ui/missing-display.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    First,
    Second,
}

fn main() {}
